[gd_scene load_steps=4 format=3 uid="uid://dou5xb1aufjfs"]

[ext_resource type="Texture2D" uid="uid://bpqkwmpdm6hn7" path="res://icon.svg" id="1_phhsp"]
[ext_resource type="Script" uid="uid://bbm0itxou3ned" path="res://Scripts/hitbox.gd" id="2_47xjv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_klejn"]
size = Vector2(125, 125)

[node name="Hitbox" type="Node2D"]
script = ExtResource("2_47xjv")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.500002, -0.5)
shape = SubResource("RectangleShape2D_klejn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_phhsp")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
